# water-tracker

./: flet.toml  main.py  pyproject.toml
.github/workflows/: build.yml
android/app/src/: AndroidManifest.xml
