[project]
name = "forest-app"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "flet>=0.84.0",
    "flet-webview>=0.84.0",
]

[tool.flet.android.manifest_application]
usesCleartextTraffic = "true"

[tool.flet.android]
min_sdk_version = 21
target_sdk_version = 34

[tool.flet]
org = "com.forest"
product = "forest-app"
